WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
232507
Crash setting up AVCaptureSession
https://bugs.webkit.org/show_bug.cgi?id=232507
Summary
Crash setting up AVCaptureSession
Kate Cheney
Reported
2021-10-29 14:43:59 PDT
Crash setting up AVCaptureSession
Attachments
Patch
(4.41 KB, patch)
2021-10-29 14:45 PDT
,
Kate Cheney
ews-feeder
: commit-queue-
Details
Formatted Diff
Diff
Patch
(4.30 KB, patch)
2021-10-29 15:46 PDT
,
Kate Cheney
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Kate Cheney
Comment 1
2021-10-29 14:45:17 PDT
Created
attachment 442865
[details]
Patch
Kate Cheney
Comment 2
2021-10-29 14:45:41 PDT
rdar://84820282
Kate Cheney
Comment 3
2021-10-29 15:40:31 PDT
Comment on
attachment 442865
[details]
Patch cq-, I think the #include OSObjectPtr.h needs cocoa flags.
Kate Cheney
Comment 4
2021-10-29 15:46:31 PDT
Created
attachment 442875
[details]
Patch
Kate Cheney
Comment 5
2021-10-29 15:47:07 PDT
waiting for green EWS before cq+.
EWS
Comment 6
2021-10-29 18:29:52 PDT
Committed
r285068
(
243710@main
): <
https://commits.webkit.org/243710@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 442875
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug