Crash setting up AVCaptureSession https://bugs.webkit.org/show_bug.cgi?id=232507 <rdar://problem/84820282>

Reviewed by Jer Noble.

Source/WebCore:

* platform/mediastream/RealtimeMediaSourceCenter.h:
* platform/mediastream/mac/AVVideoCaptureSource.mm:
(WebCore::AVVideoCaptureSource::setupSession):

Source/WebKit:

* GPUProcess/cocoa/GPUConnectionToWebProcessCocoa.mm:
(WebKit::GPUConnectionToWebProcess::setTCCIdentity):



Canonical link: https://commits.webkit.org/243710@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@285068 268f45cc-cd09-0410-ab3c-d52691b4dbfc