Source/WebCore/platform/mediastream/mac/AVVideoCaptureSource.mm
@@ -426,7 +426,7 @@ bool AVVideoCaptureSource::setupSession()
 #if ENABLE(APP_PRIVACY_REPORT)
     auto identity = RealtimeMediaSourceCenter::singleton().identity();
     if (identity && [PAL::allocAVCaptureSessionInstance() respondsToSelector:@selector(initWithAssumedIdentity:)])
-        m_session = adoptNS([PAL::allocAVCaptureSessionInstance() initWithAssumedIdentity:*identity]);
+        m_session = adoptNS([PAL::allocAVCaptureSessionInstance() initWithAssumedIdentity:identity.get()]);
     else
         m_session = adoptNS([PAL::allocAVCaptureSessionInstance() init]);
 #else
